fix: Vertically align view details button

--- a/css/styles.css
+++ b/css/styles.css
@@ -155,6 +155,10 @@ nav h1 a {
   padding: 0 30px 25px;
   text-align: left;
   width: 270px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 #restaurants-list .restaurant-img {
   background-color: #ccc;
